# glorpen-config

./: .gitignore  .hgignore  .hgtags  .readthedocs.yml  .travis.yml  README.rst  setup.cfg  setup.py
doc/: Makefile  code.rst  conf.py  index.rst  usage.rst
src/: glorpen_config.py
src/config/: __init__.py  fields.py  tests.py
src/glorpen/config/: __init__.py  config.py  exceptions.py  fields.py  loaders.py  tests.py  validation.py
src/glorpen/config/fields/: __init__.py  base.py  log.py  simple.py  utils.py  version.py
src/glorpen/config/model/: schema.py  transformer.py
src/glorpen/config/tests/: config.py
src/glorpen/config/tests/fields/: base.py  simple.py
src/glorpen/config/tests/translators/: yaml.py
src/glorpen/config/translators/: base.py  yaml.py
tests/: test_config.py
tests/fields/: base.py  test_log.py  test_simple.py  test_version.py
tests/model/: test_schema.py
tests/translators/: yaml.py
