[metadata]
name = glorpen-config
version = 3.0.0
author = Arkadiusz Dzięgiel
author_email = arkadiusz.dziegiel@glorpen.pl
description = Loads, validates and normalizes configuration.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/glorpen/glorpen-config
project_urls =
    Bug Tracker = https://github.com/glorpen/glorpen-config/issues
classifiers =
    "Development Status :: 5 - Production/Stable"
    "Intended Audience :: Developers"
    "License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)"
    "Programming Language :: Python :: 3"
    "Programming Language :: Python :: 3.9"
    "Programming Language :: Python :: 3.10"
    "Topic :: Software Development :: Libraries :: Python Modules"
[options]
package_dir =
    = src
packages = glorpen.config
python_requires = >=3.9
install_requires =

[options.packages.find]
where = src

[options.extras_require]
semver = semver>=2.0,<3.0
yaml = PyYAML>=5.0,<6.0
toml = tomli>=2.0.0,<3
tests = pytest>=7,<8
